finished nav, moved projects section to own component, setup click handlers to render components

--- a/src/components/JumboTron/JumboTron.scss
+++ b/src/components/JumboTron/JumboTron.scss
@@ -1,8 +1,9 @@
 .JumboTron {
+  margin-top: 15vh;
+  margin-left: -15vw;
   height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
 
 
   &__text {
