--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,13 +1,12 @@
 .Header {
-  background-color: #f1f1f1;
-  padding-top: 10vh;
+  // background-color: #f1f1f1;
+  // padding-top: 10vh;
   height: 30vh;
   display: flex;
   justify-content: center;
   align-items: center;
   padding-bottom: 5vh;
-
-
+  
   &__text {
     position: relative;
     color: #fff;
