--- a/src/components/ProjectCards/ProjectCards.scss
+++ b/src/components/ProjectCards/ProjectCards.scss
@@ -1,125 +1,31 @@
 .ProjectCards {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  column-gap: 5vw;
-  width: 70vw;
-  min-height: 100vh;
   position: relative;
-  margin: 0 auto;
-  margin-left: 20vw;
-  margin-bottom: -30vh;
-  transform: skewY(-30deg) skewX(25deg);
+  height: 150px;
+  width: 250px;
+  transform: rotateX(60deg) rotateY(0deg) rotateZ(-45deg);
+  transform-style: preserve-3d;
+  transition: 0.3s ease-in;
+  display: inline-block;
+  position: static;
+  top: 0px;
+  box-shadow: 0px -2px 30px -5px #000;
+  overflow: hidden;
+  transform-style: preserve-3d;
+  background-color: transparent;
 
-
-  &__card {
-    transition: 0.5s;
-    position: relative;
-    width: 300px;
-    height: 400px;
+  &__face,
+  &__back {
+    height: 150px;
+    width: 250px;
   }
 
-  &__card:hover {
-    transform: translateY(-40px) translateX(20px);
-  }
+}
 
+.ProjectCards:hover {
   
-
-  &__header {
-    position: relative;
-    width: 300px;
-    height: 200px;
-    background-color: #c32e00;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    &--image {
-      font-size: 5.5rem;
-      color: #fff;
-      max-width: 100px;
-    }
-
-    &--title {
-      position: relative;
-      color: #fff;
-      margin-top: 10px;  
-    }
-  }
-
-  &__header::before {
-    content: '';
-    position: absolute;
-    bottom: 9px;
-    left: -20px;
-    height: 100%;
-    width: 20px;
-    background-color: #d33100;
-    transform: rotate(0deg) skewY(45deg);
-  }
-
-  &__header::after {
-    content: '';
-    position: absolute;
-    top: -160px;
-    left: 129px;
-    height: 150%;
-    width: 20px;
-    background-color: #db3300;
-    transform: rotate(-90deg) skewY(-45deg);
-  }
-
-  &__content {
-    position: relative;
-    text-align: center;
-    width: 260px;
-    height: 200px;
-    min-height: 200px;
-    padding: 20px;
-    color: rgb(141, 134, 134);
-    text-overflow: clip;
-    background-color: #fff;
-    transition: 0.5s;
-  }
-
-  
-
-  &__content::after {
-    content: '';
-    position: absolute;
-    bottom: 9px;
-    left: -20px;
-    height: 100%;
-    width: 20px;
-    background-color: rgb(248, 248, 248);
-    transform: rotate(0deg) skewY(45deg);
-  }
-
-  &__content::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    width: 300px;
-    height: 400px;
-    background: linear-gradient(transparent, transparent, rgba(0, 0, 0, 0.5));
-    transform: skewX(15deg) skewY(0) translateX(-68px) translateY(-18px);
-    z-index: -1;
-  }
-
-  &__card:hover {
-
-    .ProjectCards__content::before {
-      content: '';
-      position: absolute;
-      left: 0;
-      bottom: 0;
-      width: 250px;
-      height: 400px;
-      background: linear-gradient(transparent, transparent, rgba(0, 0, 0, 0.5));
-      transform: skewX(15deg) skewY(0) translateX(-48px) translateY(10px);
-      filter: blur(10px);
-      z-index: -1;
-    }
-  }
+  transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(2);
+  transition: 0.3s ease-in;
+  z-index: 999999;
+  position: relative;
+  cursor: pointer;
 }
