ready for alpha deployment

--- a/src/components/Arrow/Arrow.scss
+++ b/src/components/Arrow/Arrow.scss
@@ -100,7 +100,7 @@
   top: 40px;
   left: -18px;
   transition: 0.4s;
-  border-top: 100px solid #2ea0ab;
+  border-top: 100px solid #c48f5e;
   border-left: 100px solid transparent;
   border-right: 100px solid transparent;
 }
@@ -110,7 +110,7 @@
     left: -7.6px;
     top: 46px;
     transition: 0.4s;
-    border-top: 90px solid #297d85;
+    border-top: 90px solid #db9a5d;
     border-left: 90px solid transparent;
     border-right: 90px solid transparent;
 }
@@ -121,7 +121,7 @@
     top: 65px;
     left: -20.1px;
     transition: 0.4s;
-    border-top: 100px solid #23c9d9;
+    border-top: 100px solid #ffa34d;
     border-left: 100px solid transparent;
     border-right: 100px solid transparent;
 }
