--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -20,3 +20,83 @@
     left: 55%;
   }
 }
+
+
+@media
+  (max-width: 10500px)
+  {
+  .About {
+
+    
+    &__header {
+      transform: scale(0.7);
+    }
+
+    &__interests {
+      transform: scale(0.7);
+      top: 450px;
+    }
+
+    &__history {
+      transform: scale(0.7);
+      top: 650px;
+    }
+
+    &__future {
+      transform: scale(0.7);
+      top: 950px;
+    }
+  }
+}
+
+@media 
+  only screen and (max-width: 800px) and (max-height: 450px) {
+    
+  .About {
+
+    min-height: 120vh;
+    
+    &__header {
+      transform: scale(0.5);
+      padding-top: 50px;
+    }
+
+    &__interests {
+      display: none;
+    }
+
+    &__history {
+      display: none;
+    }
+
+    &__future {
+      display: none;
+    }
+  }
+}
+
+@media 
+  only screen and (max-width: 450px) {
+    
+  .About {
+
+    min-height: 90vh;
+    
+    &__header {
+      transform: scale(0.5);
+      padding-top: 50px;
+    }
+
+    &__interests {
+      display: none;
+    }
+
+    &__history {
+      display: none;
+    }
+
+    &__future {
+      display: none;
+    }
+  }
+}
