--- a/src/components/About/components/Interests/Interests.scss
+++ b/src/components/About/components/Interests/Interests.scss
@@ -39,3 +39,50 @@
     text-align: justify;
   }
 }
+
+
+@media
+  (max-width: 700px)
+  {
+  .Interests {
+    width: 500px;
+    padding: 20px;
+    box-sizing: border-box;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(38deg) skew(-20deg, 0);
+  
+    &__title {
+      position: relative;
+      font-size: 40px;
+      text-align: center;
+      color: #6cc644;
+      transform-origin: bottom;
+      transform: skew(50deg);
+      text-shadow: 
+        -1px -1px 0 black,
+        -2px -2px 0 black,
+        -3px -3px 0 black;
+    }
+  
+    &__title:before {
+      content: 'MY INTERESTS';
+      position: absolute;
+      color: rgba(108, 198, 68, 0.2);
+      font-size: 40px;
+      text-align: center;
+      transform-origin: bottom;
+      transform: skew(-50deg) rotateX(180deg);
+      text-shadow: none;
+      top: -20px;
+      left: 102px;
+    }
+  
+    &__text {
+      font-size: 20px;
+      line-height: 30px;
+      text-align: justify;
+    }
+}
+}
