--- a/src/components/JumboTron/JumboTron.scss
+++ b/src/components/JumboTron/JumboTron.scss
@@ -27,3 +27,269 @@
     }
   }
 }
+
+@media (max-width: 1650px) {
+  .JumboTron {
+
+
+    &__text {
+      
+    
+      &--first {
+        position: absolute;
+        top: 25%;
+        left: 18%;
+        transform: scale(0.80);
+      }
+  
+      &--last {
+        position: absolute;
+        top: 35%;
+        left: 24%;
+        transform: scale(0.80);
+      }
+  
+      &--nick {
+        position: absolute;
+        top: 46%;
+        left: 31%;
+        transform: scale(0.80);
+      }
+    }
+  }
+}
+
+@media (max-width: 1350px) {
+  .JumboTron {
+
+
+    &__text {
+      
+    
+      &--first {
+        position: absolute;
+        top: 25%;
+        left: 18%;
+        transform: scale(0.70);
+      }
+  
+      &--last {
+        position: absolute;
+        top: 35%;
+        left: 24%;
+        transform: scale(0.70);
+      }
+  
+      &--nick {
+        position: absolute;
+        top: 45%;
+        left: 31%;
+        transform: scale(0.70);
+      }
+    }
+  }
+}
+
+// @media
+//   (max-width: 1050px),
+//   only screen and (-webkit-min-device-pixel-ratio: 2),
+//   only screen and (min-resolution: 192dpi)
+//   {
+//     .JumboTron {
+
+//       &__text {
+//         &--first {
+//           position: absolute;
+//           top: 34%;
+//           left: 6%;
+//           transform: scale(0.50);
+//         }
+    
+//         &--last {
+//           position: absolute;
+//           top: 44%;
+//           left: 11%;
+//           transform: scale(0.50);
+//         }
+    
+//         &--nick {
+//           position: absolute;
+//           top: 55%;
+//           left: 19%;
+//           transform: scale(0.50);
+//         }
+//       }
+//     }
+// }
+
+@media (max-width: 1050px) {
+  .JumboTron {
+
+    &__text {
+      &--first {
+        position: absolute;
+        top: 29%;
+        left: 11%;
+        transform: scale(0.50);
+      }
+  
+      &--last {
+        position: absolute;
+        top: 38%;
+        left: 17%;
+        transform: scale(0.50);
+      }
+  
+      &--nick {
+        position: absolute;
+        top: 48%;
+        left: 24%;
+        transform: scale(0.50);
+      }
+    }
+  }
+}
+
+@media (max-width: 800px) {
+  .JumboTron {
+
+    &__text {
+      &--first {
+        position: absolute;
+        top: 25%;
+        left: 6%;
+        transform: scale(0.50);
+      }
+  
+      &--last {
+        position: absolute;
+        top: 33%;
+        left: 12%;
+        transform: scale(0.50);
+      }
+  
+      &--nick {
+        position: absolute;
+        top: 40%;
+        left: 22%;
+        transform: scale(0.50);
+      }
+    }
+  }
+}
+
+@media 
+  only screen and (max-width: 800px) and (max-height: 450px) {
+  .JumboTron {
+
+    &__text {
+      &--first {
+        position: absolute;
+        top: 35%;
+        left: -4%;
+        transform: scale(0.35);
+      }
+  
+      &--last {
+        position: absolute;
+        top: 48%;
+        left: 0%;
+        transform: scale(0.35);
+      }
+  
+      &--nick {
+        position: absolute;
+        top: 62%;
+        left: 6%;
+        transform: scale(0.35);
+      }
+    }
+  }
+}
+
+@media 
+  only screen and (max-width: 700px) and (max-height: 450px) {
+    .JumboTron {
+
+      &__text {
+        &--first {
+          position: absolute;
+          top: 26vh;
+          left: -10vw;
+          transform: scale(0.35);
+        }
+    
+        &--last {
+          position: absolute;
+          top: 42vh;
+          left: -5vw;
+          transform: scale(0.35);
+        }
+    
+        &--nick {
+          position: absolute;
+          top: 56vh;
+          left: 5vw;
+          transform: scale(0.35);
+        }
+      }
+    }
+}
+
+@media 
+  only screen and (max-width: 450px) {
+  .JumboTron {
+
+    &__text {
+      &--first {
+        position: absolute;
+        top: 19vh;
+        left: -33vw;
+        transform: scale(0.35);
+      }
+  
+      &--last {
+        position: absolute;
+        top: 28vh;
+        left: -22vw;
+        transform: scale(0.35);
+      }
+  
+      &--nick {
+        position: absolute;
+        top: 36vh;
+        left: -5vw;
+        transform: scale(0.35);
+      }
+    }
+  }
+}
+
+@media 
+  only screen and (max-width: 450px) {
+  .JumboTron {
+
+    &__text {
+      &--first {
+        position: absolute;
+        top: 19vh;
+        left: -38vw;
+        transform: scale(0.30);
+      }
+  
+      &--last {
+        position: absolute;
+        top: 28vh;
+        left: -27vw;
+        transform: scale(0.30);
+      }
+  
+      &--nick {
+        position: absolute;
+        top: 36vh;
+        left: -12vw;
+        transform: scale(0.30);
+      }
+    }
+  }
+}
