--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -17,6 +17,81 @@
 
 .ProjectCards__card--one:hover {
   background-color: red;
+}
 
-  
+@media (max-width: 1650px) {
+  .Main {
+
+    &__arrow {
+      transform: scale(0.85)
+    }
+  }
+}
+
+@media (max-width: 1350px) {
+  .Main {
+
+    &__arrow {
+      transform: scale(0.7)
+    }
+  }
+}
+
+
+
+@media
+  (max-width: 1050px)
+  {
+  .Main {
+
+    &__arrow {
+      transform: scale(0.5);
+      bottom: 25%;
+    }
+  }
+}
+
+@media
+  (max-width: 800px)
+  {
+  .Main {
+
+    &__arrow {
+      transform: scale(0.5);
+      bottom: 15%;
+    }
+  }
+}
+
+@media
+  only screen and (max-width: 800px) and (max-height: 450px) {
+  .Main {
+
+    &__arrow {
+      transform: scale(0.35);
+      top: 210px;
+    }
+  }
+}
+
+@media
+  only screen and (max-width: 700px) and (max-height: 450px) {
+  .Main {
+
+    &__arrow {
+      transform: scale(0.35);
+      top: 180px;
+    }
+  }
+}
+
+@media
+  only screen and (max-width: 450px) {
+  .Main {
+
+    &__arrow {
+      transform: scale(0.35);
+      top: 80vh;
+    }
+  }
 }
