--- a/src/components/ProjectCards/ProjectCards.scss
+++ b/src/components/ProjectCards/ProjectCards.scss
@@ -29,3 +29,52 @@
   position: relative;
   cursor: pointer;
 }
+
+@media
+  (max-width: 1050px)
+  {
+  .ProjectCards {
+    transform: rotateX(60deg) rotateY(0deg) rotateZ(-45deg) scale(0.7);
+    
+    
+  }
+
+  .ProjectCards:hover {
+  
+    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(2) scale(0.7);
+  }
+}
+
+@media
+  (max-width: 800px)
+  {
+  .ProjectCards {
+    transform: rotateX(60deg) rotateY(0deg) rotateZ(-45deg) scale(0.6);
+    margin-left: -20px;
+    
+    
+  }
+
+  .ProjectCards:hover {
+  
+    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(2) scale(0.6);
+    margin-left: -20px;
+  }
+}
+
+@media
+  (max-width: 700px)
+  {
+  .ProjectCards {
+    transform: rotateX(60deg) rotateY(0deg) rotateZ(-45deg) scale(0.55);
+    margin-left: -20px;
+    
+    
+  }
+
+  .ProjectCards:hover {
+  
+    transform: rotateX(0deg) rotateY(0deg) rotateZ(0deg) scale(2) scale(0.55);
+    margin-left: -20px;
+  }
+}
