--- a/src/components/Skills/Skills.scss
+++ b/src/components/Skills/Skills.scss
@@ -1,8 +1,14 @@
 .Skills {
   width: 50%;
+  max-width: 100vw;
   margin: 0 auto;
   position: relative;
   min-height: 1350px;
+
+  &__header {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
 
   &__cubes {
     padding-top: 13em;
@@ -14,85 +20,487 @@
     position: absolute;
     left: 50%;
     bottom: 20%;
-
-    // &::before {
-    //   content: 'WEAK';
-    //   position: absolute;
-    //   bottom: 0px;
-    //   left: -56px;
-    //   color: red;
-    //   font-weight: bolder;
-    //   font-size: 1.8rem;
-    //   transform: rotate(315deg) skewX(35deg);
-    //   transform-origin: right top;
-    //   z-index: 50;
-    // }
-
-    // &::after {
-    //   content: 'STRONG';
-    //   position: absolute;
-    //   bottom: -80px;
-    //   right: -54px;
-    //   color: green;
-    //   font-weight: bolder;
-    //   font-size: 1.8rem;
-    //   transform: rotate(45deg) skewX(-35deg);
-    //   transform-origin: right top;
-    //   z-index: 50;
-    // }
   }
 
-  &__floor {
-    position: absolute;
-    top: 1040px;
-    bottom: 50px;
-    left: 300px;
-    right: -570px;
+  // &__floor {
+  //   position: absolute;
+  //   top: 1040px;
+  //   bottom: 50px;
+  //   left: 300px;
+  //   right: -570px;
     // -webkit-clip-path: polygon(0% 0%, 88.6% 100%, 100% 100%, 90% 100%);
-    clip-path: polygon(17.4% 0%, 77.6% 0%, 85.6% 37.7%, 11.7% 27%);
-    background-color: gold;
-    background-image: -webkit-linear-gradient(right, #ccc, #ccc);
+    // clip-path: polygon(17.4% 0%, 77.6% 0%, 85.6% 37.7%, 11.7% 27%);
+    // background-color: gold;
+    // background-image: -webkit-linear-gradient(right, #ccc, #ccc);
     // border-bottom: 20px solid red;
-  }
+  // }
 
   &__text {
 
+
     &--xd,
     &--photoshop,
-    &--illustrator { 
+    &--illustrator,
+    &--html,
+    &--css,
+    &--javascript,
+    &--react,
+    &--node,
+    &--deno,
+    &--express,
+    &--mongo,
+    &--postgres { 
       width: 500px;
       padding: 20px;
       box-sizing: border-box;
       position: absolute;
-      top: 70%;
-      left: 60%;
+      top: 75%;
+      left: 55%;
       transition: 0.5s ease-in-out;
       transform: rotateX(90deg);
     }
 
     &--xdText,
     &--photoshopText,
-    &--illustrator {
+    &--illustratorText,
+    &--htmlText,
+    &--cssText,
+    &--javascriptText,
+    &--reactText,
+    &--nodeText,
+    &--denoText,
+    &--expressText,
+    &--mongoText,
+    &--postgresText {
       font-size: 20px;
       line-height: 20px;
       text-align: justify;
     }
 
     &--xdText {
-      color: #941970 !important;
+      color: #831564 !important;
     }
 
     &--photoshopText {
-      color: #647fa1;
+      color: #4d627a;
     }
 
     &--illustrator {
-      color: #a16202;
+      color: #865c1d;
+    }
+
+    &--htmlText {
+      color: #8b3019;
+    }
+
+    &--cssText {
+      color: #834464;
+    }
+
+    &--javascriptText {
+      color: #6b6122;
+    }
+
+    &--reactText {
+      color: #326d7c;
+    }
+
+    &--nodeText {
+      color: #486e45;
+    }
+
+    &--denoText {
+      color: #2b2b2b;
+    }
+
+    &--expressText {
+      color: #696868;
+    }
+
+    &--mongoText {
+      color: #327428;
+    }
+
+    &--postgresText {
+      color: #1b5669;
     }
   }
 
   &__textActive {
     transform: rotateX(0deg);
   }
+
+  &__mobile {
+    display: none;
+    position: absolute;
+    width: 700px;
+    margin: 0;
+    height: 1000px;
+    left: 50%;
+    transform: translateX(-50%);
+
+    &--frontendText,
+    &--backendText,
+    &--designTextA,
+    &--designTextB,
+    &--designTextC {
+      position: absolute;
+    }
+
+    &--frontendText {
+      width: 35%;
+      top: 50px;
+      right: 10%;
+    }
+
+    &--backendText {
+      width: 35%;
+      top: 450px;
+      left: 10%;
+    }
+
+    &--designTextA {
+      width: 25%;
+      top: 870px;
+      left: 10%;
+    }
+
+    &--designTextB {
+      width: 25%;
+      top: 870px;
+      right: 8%;
+    }
+
+    &--designTextC {
+      display: none;
+    }
+
+    &--frontend,
+    &--backend,
+    &--design {
+      width: 0;
+    }
+
+    &--deno,
+    &--html,
+    &--illustrator,
+    &--javascript,
+    &--mongoDB,
+    &--node,
+    &--photoshop,
+    &--postgress,
+    &--react,
+    &--sass,
+    &--xd,
+    &--cube1,
+    &--cube2,
+    &--cube3,
+    &--cube4 {
+      position: absolute;
+    }
+
+    &--html {
+      top: 250px;
+      left: 300px;
+      z-index: 50;
+    }
+
+    &--sass {
+      top: 250px;
+      left: 128px;
+      z-index: 55;
+    }
+
+    &--javascript {
+      top: 176px;
+      left: 257px;
+      z-index: 60;
+    }
+
+    &--react {
+      top: 101px;
+      left: 215px;
+      z-index: 65;
+    }
+
+    &--cube1 {
+      top: 176px;
+      left: 171px;
+      z-index: 15;
+    }
+
+    &--cube2 {
+      top: 250px;
+      left: 214px;
+      z-index: 10;
+    }
+
+    &--deno {
+      top: 650px;
+      right: 200px;
+      z-index: 50;
+    }
+
+    &--mongoDB {
+      top: 650px;
+      right: 114px;
+      z-index: 50;
+    }
+
+    &--node {
+      top: 501px;
+      right: 113px;
+      z-index: 55;
+    }
+
+    &--postgress {
+      top: 650px;
+      right: 28px;
+      z-index: 50;
+    }
+
+    &--cube3 {
+      top: 576px;
+      right: 70px;
+      z-index: 50;
+    }
+
+    &--cube4 {
+      top: 576px;
+      right: 156px;
+      z-index: 50;
+    }
+
+    &--xd {
+      top: 900px;
+      left: 50%;
+      z-index: 50;
+    }
+
+    &--photoshop {
+      top: 975px;
+      left: 56.2%;
+      z-index: 50;
+    }
+
+    &--illustrator {
+      top: 975px;
+      left: 43.9%;
+      z-index: 50;
+    }
+  }
 }
 
+
+@media
+  (max-width: 1050px)
+  {
+  .Skills {
+
+    
+    &__header {
+      transform: scale(0.7);
+    }
+
+    &__cubes {
+      transform: scale(0.7);
+      left: -20%;
+    }
+
+    &__graph {
+      transform: scale(0.7);
+      left: 10%;
+    }
+    
+    &__text {
+
+      &--xd,
+      &--photoshop,
+      &--illustrator,
+      &--html,
+      &--css,
+      &--javascript,
+      &--react,
+      &--node,
+      &--deno,
+      &--express,
+      &--mongo,
+      &--postgres {
+        width: 400px;
+      }
+    }
+  }
+}
+
+@media
+  (max-width: 800px)
+  {
+  .Skills {
+    min-height: 1950px;
+
+    
+    &__header {
+      transform: scale(0.5);
+    }
+    
+    &__graph,
+    &__cubes {
+      display: none;
+    }
+
+    &__mobile {
+      display: block;
+    }
+  }
+}
+
+
+@media
+  (max-width: 700px)
+  {
+  .Skills {
+
+    
+    &__header {
+      transform: scale(0.4);
+    }
+
+    
+    
+  }
+}
+
+
+
+@media
+  (max-width: 450px)
+  {
+  .Skills {
+
+    &__mobile {
+    
+      position: absolute;
+      width: 350px;
+      margin: 0;
+      height: 1000px;
+
+      &--frontendText {
+        width: 80%;
+        top: 320px;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+  
+      &--backendText {
+        width: 80%;
+        top: 870px;
+        left: 50%;
+        transform: translateX(-50%);
+      }
+  
+      &--designTextA {
+        display: none;
+      }
+  
+      &--designTextB {
+        display: none;
+      }
+  
+      &--designTextC {
+        width: 80%;
+        top: 1300px;
+        left: 50%;
+        transform: translateX(-50%);
+        display: inline-block;
+      }
+  
+      &--xd {
+        top: 1150px;
+        left: 50%;
+      }
+  
+      &--photoshop {
+        top: 1224px;
+        left: 61.8%;
+      }
+  
+      &--illustrator {
+        top: 1225px;
+        left: 37.6%;
+      }
+      
+    &--html {
+      top: 250px;
+      left: 250px;
+    }
+
+    &--sass {
+      top: 250px;
+      left: 78px;
+      z-index: 55;
+    }
+
+    &--javascript {
+      top: 176px;
+      left: 207px;
+      z-index: 60;
+    }
+
+    &--react {
+      top: 101px;
+      left: 165px;
+      z-index: 65;
+    }
+
+    &--cube1 {
+      top: 176px;
+      left: 121px;
+      z-index: 15;
+    }
+
+    &--cube2 {
+      top: 250px;
+      left: 164px;
+      z-index: 10;
+    }
+
+    &--deno {
+      top: 790px;
+      right: 180px;
+      z-index: 50;
+    }
+
+    &--mongoDB {
+      top: 790px;
+      right: 94px;
+      z-index: 50;
+    }
+
+    &--node {
+      top: 641px;
+      right: 93px;
+      z-index: 55;
+    }
+
+    &--postgress {
+      top: 790px;
+      right: 8px;
+      z-index: 50;
+    }
+
+    &--cube3 {
+      top: 716px;
+      right: 50px;
+      z-index: 50;
+    }
+
+    &--cube4 {
+      top: 716px;
+      right: 136px;
+      z-index: 50;
+    }
+    }
+    
+    
+  }
+}
