--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -345,7 +345,7 @@
   only screen and (max-width: 450px) {
     .Nav {
       transform: scale(0.4) rotateY(-150deg);
-      top: 450px;
+      bottom: 30vh;
       left: 75vw;
 
       
