--- a/src/components/ProjectCards/ProjectCards.scss
+++ b/src/components/ProjectCards/ProjectCards.scss
@@ -64,6 +64,8 @@
 
 @media
   (max-width: 700px)
+  and (-webkit-min-device-pixel-ratio: 2), 
+  (min-resolution: 192dpi)
   {
   .ProjectCards {
     transform: rotateX(60deg) rotateY(0deg) rotateZ(-45deg) scale(0.55);
